--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapp-common-js",
-  "version": "0.0.1",
+  "version": "0.0.2-d",
   "authors": [
     "Adir Lima <adir.santos@techne.com.br>"
   ],
