Adição de: gulpfile.js, package.json e postupdate.json.

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "Adir Lima <adir.santos@techne.com.br>"
   ],
   "description": "Cronapp Commons Functions",
-  "main": "build/parser.js",
+  "main": "dist/parser.js",
   "keywords": [
     "dom",
     "xml",
