--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,9 @@
             <artifactId>json</artifactId>
             <version>20180813</version>
         </dependency>
-        <!-- Test dependencies inicio -->
+        <!-- ########################## -->
+        <!-- For Testing -->
+        <!-- ########################## -->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
