--- a/pom.xml
+++ b/pom.xml
@@ -237,7 +237,16 @@
       <artifactId>json</artifactId>
       <version>20180813</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.cxf</groupId>
+      <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+      <version>3.1.12</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
