--- a/pom.xml
+++ b/pom.xml
@@ -220,11 +220,6 @@
       <version>${odata.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>2.0.1.RELEASE</version>
-    </dependency>
-    <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.4</version>
@@ -265,6 +260,11 @@
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
       <version>${amazon.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.stimulsoft</groupId>
+      <artifactId>stimulsoft-reports-report</artifactId>
+      <version>2019.4.2</version>
     </dependency>
   </dependencies>
   <distributionManagement>
