--- a/pom.xml
+++ b/pom.xml
@@ -220,6 +220,16 @@
       <version>${odata.version}</version>
     </dependency>
     <dependency>
+      <groupId>io.cronapp</groupId>
+      <artifactId>olingo-odata2-client-core</artifactId>
+      <version>2.4.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>io.cronapp</groupId>
+      <artifactId>olingo-odata2-client-api</artifactId>
+      <version>2.4.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>commons-dbcp</groupId>
       <artifactId>commons-dbcp</artifactId>
       <version>1.4</version>
@@ -264,7 +274,7 @@
     <dependency>
       <groupId>com.stimulsoft</groupId>
       <artifactId>stimulsoft-reports-report</artifactId>
-      <version>2019.4.2</version>
+      <version>2020.1.1</version>
     </dependency>
   </dependencies>
   <distributionManagement>
