--- a/pom.xml
+++ b/pom.xml
@@ -222,12 +222,12 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-client-core</artifactId>
-      <version>2.7.0-SNAPSHOT</version>
+       <version>${odata.version}</version>
     </dependency>
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-client-api</artifactId>
-      <version>2.7.0-SNAPSHOT</version>
+       <version>${odata.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-dbcp</groupId>
