CRONAPP-3284 - Modificações no customQuery em projeto versionado

--- a/pom.xml
+++ b/pom.xml
@@ -273,6 +273,11 @@
       <version>1.9</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.12</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
