--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,11 @@
       <version>1.4.200</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.12</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
