--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>cronapp-reports-exec</artifactId>
-      <version>${reports.version}</version>
+      <version>${cronapp-framework-spring.version}</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -217,17 +217,17 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>${odata.version}</version>
+      <version>${cronapp-framework-spring.version}</version>
     </dependency>
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-client-core</artifactId>
-      <version>${odata.version}</version>
+      <version>${cronapp-framework-spring.version}</version>
     </dependency>
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-client-api</artifactId>
-      <version>${odata.version}</version>
+      <version>${cronapp-framework-spring.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-dbcp</groupId>
@@ -346,8 +346,6 @@
     <project.cronospass.resource mimetype="folder/libs">lib</project.cronospass.resource>
     <project.cronospass.resource mimetype="folder/src">src/main/java</project.cronospass.resource>
     <project.cronospass.resource mimetype="folder/src">src/test/java</project.cronospass.resource>
-    <odata.version>2.7.0</odata.version>
-    <reports.version>2.7.0</reports.version>
     <eclipselink.version>2.7.7</eclipselink.version>
     <junit-jupiter.version>5.7.0</junit-jupiter.version>
     <junit-platform.version>1.7.0</junit-platform.version>
